--- a/config/sensors.yaml
+++ b/config/sensors.yaml
@@ -1,24 +1,19 @@
-- name: camera1_detection_fps_in
+- name: camera1_sensor
   platform: mqtt
   state_topic: "watsor/cameras/camera1/sensor"
+  json_attributes_topic: "watsor/cameras/camera1/sensor"
   availability_topic: "watsor/cameras/camera1/available"
-  unit_of_measurement: 'FPS'
-  value_template: "{{ value_json.fps_in }}"
-
-- name: camera1_detection_fps_out
-  platform: mqtt
-  state_topic: "watsor/cameras/camera1/sensor"
-  availability_topic: "watsor/cameras/camera1/available"
-  unit_of_measurement: 'FPS'
-  value_template: "{{ value_json.fps_out }}"
-
-- name: camera1_detection_buffer
-  platform: mqtt
-  state_topic: "watsor/cameras/camera1/sensor"
-  availability_topic: "watsor/cameras/camera1/available"
-  unit_of_measurement: '%'
-  value_template: "{{ value_json.buffer }}"
-
+- platform: template
+  sensors:
+    camera1_detection_fps_in:
+      value_template: '{{ states.sensor.camera1_sensor.attributes["fps_in"] }}'
+      unit_of_measurement: 'FPS'
+    camera1_detection_fps_out:
+      value_template: '{{ states.sensor.camera1_sensor.attributes["fps_out"] }}'
+      unit_of_measurement: 'FPS'
+    camera1_detection_buffer:
+      value_template: '{{ states.sensor.camera1_sensor.attributes["buffer"] }}'
+      unit_of_measurement: '%'
 
 - name: watsor_metrics
   platform: rest
@@ -38,3 +33,20 @@
     detector1_inference_time:
       value_template: '{{ states.sensor.watsor_metrics.attributes["detectors"][0]["inference_time"] }}'
       unit_of_measurement: 'ms'
+
+- name: camera1_car_detection_details
+  platform: mqtt
+  state_topic: "watsor/cameras/camera1/detection/car/details"
+  json_attributes_topic: "watsor/cameras/camera1/detection/car/details"
+  availability_topic: "watsor/cameras/camera1/available"
+  value_template: 'OK'
+- platform: template
+  sensors:
+    camera1_car_count:
+      availability_template: "{{ states('binary_sensor.camera1_detection_car') not in ('unknown', 'unavailable')  }}"
+      value_template: >-
+        {% if is_state('binary_sensor.camera1_car_detected', 'on') %}
+          {{ states.sensor.camera1_car_detection_details.attributes["d"] | count }}
+        {% else %}
+          0
+        {% endif %}
