--- a/config/notifications.yaml
+++ b/config/notifications.yaml
@@ -11,3 +11,7 @@
     - !secret mail_recipient_1
   sender_name: !secret name
   debug: false
+
+- name: twilio_call
+  platform: twilio_call
+  from_number: !secret twilio_from_number
