--- a/config/secrets.yaml.template
+++ b/config/secrets.yaml.template
@@ -11,6 +11,14 @@ mail_sender: "changeme"
 mail_recipient_1: "changeme"
 
 #
+# Twilio
+#
+twilio_account_sid: "changeme"
+twilio_auth_token: "changeme"
+twilio_from_number: "changeme"
+twilio_recipient_1: "changeme"
+
+#
 # Geolocation
 #
 time_zone: "changeme"
